// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Component matches snapshot for default variant 1`] = `
<div
  class="sc-fhHczv eLkUHf"
  data-testid="text-area"
>
  <div
    class="sc-ggWZvA evJOyk"
  >
    <textarea
      class="sc-bRKDuR cVKynm"
      placeholder="Enter text here"
    >
      snapshot default
    </textarea>
  </div>
</div>
`;

exports[`TextArea Component matches snapshot for report variant 1`] = `
<div
  class="sc-fhHczv eLkUHf"
  data-testid="text-area"
>
  <div
    class="sc-ggWZvA evJOyk"
  >
    <textarea
      class="sc-hvigdm juBlam"
      placeholder="Report here"
    >
      snapshot report
    </textarea>
  </div>
</div>
`;
